# cell-development-platform

./: .env.template  .gitignore  PROJECT_SUMMARY.md  README.md  README_MODULAR.md  README_MultiAgent.md  SETUP.md  ai_assistant.py  app.py  cell_design.py  cell_development_app.py  cell_development_app_claude.py  cell_development_requirements.txt  create_github_repo.sh  demo.py  direct_agent_server.py  electrode_design.py  electrode_materials.py  event_summary_extractor.py  main.py  pages.py  pages_new.py  pages_old.py  plotting.py  pyproject.toml  run_cell_development_app.py  run_modular_app.py  streamlit_app_clickable.py  test_all_materials.py  test_root_agent_limited.py  utils.py
adk_agent/: agent.py  prompts.py
adk_agent/regular_tools/: __init__.py  cell_design_tools.py  database_tools.py  simulation_tools.py  workflow_tools.py
core/: app.py  pages.py
docs/: ENV_SETUP.md  README.md
electrode_material_lib/: binders.json  conductive_agents.json  foil_materials.json
material_lib/: Aluminum_3003.json  Carbon_Fiber_Composite.json  Steel_316L.json
mcp_server/: cell_design_mcp.py  tools.py
mcp_server/cell_designer/: __init__.py  cell_design.py  chemistry_classifier.py  create_spiral_geometry.py  electrode_formulation.py  electrolyte_composition.py  materials.py  mongodb_interface.py  (+1 more)
modules/: __init__.py  ai_assistant.py  ai_context.py  cell_design.py  coa_manager.py  coa_performance.py  electrode_design.py  electrode_materials.py  material_data.py  multi_agent_chat.py  ocv_curves.py  plotting.py  schematic_generator.py  theme_colors.py  utils.py
(+9 files in other folders)
