[project]
name = "cell-development-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.107.0",
    "pip>=25.2",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
]
